// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`renders correctly 1`] = `
<PostCommentForm
  max={100}
  min={3}
  onChange={[Function]}
  onSubmit={[Function]}
/>
`;

exports[`renders with initialValues 1`] = `
<PostCommentForm
  initialValues={
    Object {
      "body": "Hello World!",
    }
  }
  max={100}
  min={3}
  onChange={[Function]}
  onSubmit={[Function]}
/>
`;
